--- a/Craveon/customer/template/menu.html
+++ b/Craveon/customer/template/menu.html
@@ -53,7 +53,7 @@
                     {% endif %}
                     <div class="p-4">
                         <h5 class="text-lg text-gray-800 font-semibold mb-2">{{ item.name }}</h5>
-                        <p class="text-sm text-gray-600 mb-3">Price: <span class="text-green-900 font-bold">₱{{ item.price }}</span></p>
+                        <p class="text-sm text-gray-600 mb-3">Price: <span class="text-green-900 font-bold">₱{{ item.price }}0</span></p>
                         <div class="flex justify-between items-center">
                             <button class="bg-blue-500 text-white px-4 py-1 rounded text-sm hover:bg-blue-600"
                                 onclick="addToCart('{{ item.item_id }}', '{{ item.name }}', '{{ item.price }}', 'data:image/jpeg;base64,{{ item.image }}')">
